[package]
name = "sadpanda"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
dom_query = "0.27.0"
either = "1.15.0"
lava_torrent = "0.11.1"
nestify = "0.3.3"
reqwest = { version = "0.13.2", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
toml = "1.1.2"

[build-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete_command = "0.6.1"
clap_mangen = "0.3.0"
